src/components/Hero/component.module.css
.hero {
  --cut: 2rem;

  padding: 2rem 1rem;
  color: var(--jahia-color);
  background: var(--jahia-background);

  /* Visual variations, configurable in the "Layout" section of jContent */
  &[data-bg="plusses"] {
    background: var(--jahia-background) url("./plusses.svg") center no-repeat;
  }

  &[data-bg="stripes"] {
    background: var(--jahia-background) url("./stripes.svg") center / cover no-repeat;
  }
}

.column {
  max-inline-size: var(--jahia-width);
  margin-inline: auto;
}

.center {
  text-align: center;
  text-wrap: balance;
}

.grid {
  display: grid;
  grid-template: 1fr / auto;

  @screen md {
    grid-template: 1fr / 1fr 1fr;
  }
}

.wrapper {
  padding: 2rem;
  border: 1px solid var(--jahia-border);
  border-block-end: 0;
  clip-path: polygon(var(--cut) 0, 100% 0, 100% 100%, 0 100%, 0 var(--cut));
  contain: paint;

  @screen md {
    border-block-end: 1px solid var(--jahia-border);
    border-inline-end: 0;
  }

  &::before {
    position: absolute;
    inset-block-start: 0;
    inset-inline-start: 0;
    inline-size: var(--cut);
    block-size: var(--cut);
    content: "";
    background-color: var(--jahia-border);
    clip-path: polygon(0 0, 100% 0, 0 100%);
  }
}

.cta {
  display: inline-flex;
  gap: 0.75rem;
  align-items: center;
  padding: 0.75rem;
  font-family: monospace;
  color: var(--jahia-neutral-700);
  text-transform: uppercase;
  text-decoration: inherit;
  background: var(--jahia-blue);
  border-radius: 0.25rem;
}

.ctaLine {
  width: 1px;
  height: 1rem;
  background: var(--jahia-neutral-700);
  opacity: 0.25;
}

.image {
  object-fit: cover;
  background-color: var(--jahia-border);
  clip-path: polygon(
    0 0,
    100% 0,
    100% calc(100% - var(--cut)),
    calc(100% - var(--cut)) 100%,
    0 100%
  );

  /* On side-by-side view, nuke the native aspect-ratio of the image to fit the container. */
  @screen md {
    height: 0;
    min-height: 100%;
  }
}

